--- a/mpvue-shop/src/app.json
+++ b/mpvue-shop/src/app.json
@@ -10,7 +10,8 @@
     "pages/mappage/main",
     "pages/brandlist/main",
     "pages/newgoods/main",
-    "pages/topicdetail/main"
+    "pages/topicdetail/main",
+    "pages/search/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
