--- a/mpvue-shop/src/app.json
+++ b/mpvue-shop/src/app.json
@@ -1,6 +1,5 @@
 {
   "pages": [
-    "pages/search/main",
     "pages/index/main",
     "pages/logs/main",
     "pages/counter/main",
@@ -11,7 +10,8 @@
     "pages/mappage/main",
     "pages/brandlist/main",
     "pages/newgoods/main",
-    "pages/topicdetail/main"
+    "pages/topicdetail/main",
+    "pages/search/main"
     
   ],
   "window": {
