--- a/mpvue-shop/src/app.json
+++ b/mpvue-shop/src/app.json
@@ -12,9 +12,8 @@
     "pages/brandlist/main",
     "pages/newgoods/main",
     "pages/topicdetail/main",
-    "pages/search/main"
-      
-    
+    "pages/search/main",
+    "pages/order/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
